6.23 medical_card update
